rota de receptores funcional
