# src/server/lib/zod-schemas/emissor/createEmissor.ts
@@ -1,11 +1,11 @@
 import z from "zod";
 
 export const CreateEmissorSchema = z.object({
-  descricao: z.string().optional().nullable(),
-  latitude: z.number().optional().nullable(),
-  longitude: z.number().optional().nullable(),
-  valorAlerta: z.number().optional().nullable(),
-  valorEmergencia: z.number().optional().nullable(),
+  descricao: z.string().optional(),
+  latitude: z.number().optional(),
+  longitude: z.number().optional(),
+  valorAlerta: z.number().optional(),
+  valorEmergencia: z.number().optional(),
   idZonaEmissao: z.number().int().positive("ID da Zona de Emissão inválido"),
 });
 
