# src/server/lib/zod-schemas/emissor/updateEmissor.ts
@@ -1,9 +1,9 @@
 import z from "zod";
 
 export const UpdateEmissorSchema = z.object({
-  descricao: z.string().optional().nullable(),
-  latitude: z.number().optional().nullable(),
-  longitude: z.number().optional().nullable(),
-  valorAlerta: z.number().optional().nullable(),
-  valorEmergencia: z.number().optional().nullable(),
+  descricao: z.string().optional(),
+  latitude: z.number().optional(),
+  longitude: z.number().optional(),
+  valorAlerta: z.number().optional(),
+  valorEmergencia: z.number().optional(),
 });
