# src/server/lib/zod-schemas/receptor/createReceptor.ts
@@ -1,9 +1,9 @@
 import z from "zod";
 
 export const CreateReceptorSchema = z.object({
-  descricao: z.string().optional().nullable(),
-  latitude: z.number().optional().nullable(),
-  longitude: z.number().optional().nullable(),
+  descricao: z.string().default(""),
+  latitude: z.number(),
+  longitude: z.number(),
   idZonaEmissao: z.number().int().positive("ID da Zona de Emissão inválido"),
 });
 
