# src/server/lib/zod-schemas/receptor/updateReceptor.ts
@@ -1,7 +1,8 @@
-import z from "zod";
+import z, { optional } from "zod";
 
 export const UpdateReceptorSchema = z.object({
-  descricao: z.string().optional().nullable(),
-  latitude: z.number().optional().nullable(),
-  longitude: z.number().optional().nullable(),
+  descricao: z.string().optional(),
+  latitude: z.number().optional(),
+  longitude: z.number().optional(),
+  idZonaEmissao: z.number().positive().optional()
 });
